<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="24dp"
        android:elevation="5dp"
        android:fontFamily="serif"
        android:text="@string/welcome_text"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/old_brown"
        app:layout_constraintEnd_toEndOf="@+id/bgImageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bgImageView2" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="214dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:elevation="4dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/bgImageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:elevation="4dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/bgImageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

    <Button
        android:id="@+id/exitButton"
        style="@android:style/Widget.Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/incorrect_answer"
        android:elevation="3dp"
        android:fontFamily="serif"
        android:onClick="exitApp"
        android:text="@string/exit"
        android:textColor="@color/old_brown"
        app:layout_constraintEnd_toStartOf="@+id/enterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/enterButton"
        style="@android:style/Widget.Button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/great_score"
        android:elevation="3dp"
        android:fontFamily="serif"
        android:onClick="enterMainActivity"
        android:text="@string/enter"
        android:textColor="@color/old_brown"
        app:layout_constraintEnd_toEndOf="@id/bgImageView2"
        app:layout_constraintStart_toEndOf="@+id/exitButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/enterButton2"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:elevation="3dp"
        android:fontFamily="serif"
        android:onClick="enterMainActivity"
        android:text="All Contacts (working)"
        android:textColor="@color/old_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bgImageView2"
        app:layout_constraintStart_toStartOf="@+id/bgImageView2"
        app:layout_constraintTop_toBottomOf="@+id/exitButton" />

    <ImageView
        android:id="@+id/bgImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/background_image"
        android:elevation="1dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/journal" />

    <ImageView
        android:id="@+id/bgImageView"
        android:layout_width="476dp"
        android:layout_height="612dp"
        android:layout_margin="0dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/background_image"
        android:elevation="-1dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tabletop" />

</android.support.constraint.ConstraintLayout>